--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
     <h2>-Login-</h2>
     <p ><a href="./login.html">Login</a> </p>
+    <p>Use https://shoexclusive.vercel.app/guest.html to login as guest</p>
 </head>
 <body>
     
