--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <h1>ShOeXclusive</h1>
     
     <h2>-Login-</h2>
-    <p ><a href="./login.html">Login</a> </p>
-    <p>Use https://shoexclusive.vercel.app/guest.html to login as guest</p>
+   <h1>SHOEXCLUSIVE UNDER MAINTAINANCE</h1>
 </head>
 <body>
     
